--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>Test 1 Site</section>
+				<section>Test 2 Site </section>
+				<section>Test 3 MW Repo for Tests only </section>
 			</div>
 		</div>
 
